Vue-Meta Package verbessert Compression hinzugefügt

--- a/monshiners_alpha/package.json
+++ b/monshiners_alpha/package.json
@@ -14,9 +14,11 @@
     "jquery": "^3.5.1",
     "js-cookie": "^2.2.1",
     "vue": "^2.6.11",
+    "vue-cli-plugin-compression": "^1.2.0",
     "vue-cookies": "^1.7.4",
     "vue-i18n": "^8.22.2",
     "vue-kinesis": "^1.2.3",
+    "vue-meta": "^2.4.0",
     "vue-parallaxy": "^1.1.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.2.11",
