--- a/monshiners_alpha/package.json
+++ b/monshiners_alpha/package.json
@@ -2,61 +2,28 @@
   "name": "monshiners_alpha",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@ecwid/sdk": "^0.8.0",
     "contentful": "^8.1.7",
-    "core-js": "^3.6.5",
     "jquery": "^3.5.1",
-    "js-cookie": "^2.2.1",
-    "vue": "^2.6.11",
-    "vue-cli-plugin-compression": "^1.2.0",
-    "vue-cookies": "^1.7.4",
-    "vue-i18n": "^8.22.2",
-    "vue-kinesis": "^1.2.3",
-    "vue-meta": "^2.4.0",
-    "vue-parallaxy": "^1.1.1",
-    "vue-router": "^3.2.0",
-    "vue-video-section": "^1.0.2",
-    "vuetify": "^2.2.11",
-    "vuetify-video-parallax": "^1.0.2",
-    "vuex": "^3.4.0"
+    "js-cookie": "^3.0.5",
+    "mitt": "^3.0.1",
+    "vue": "^3.4.21",
+    "vue-i18n": "^9.9.0",
+    "vue-kinesis": "^3.0.0",
+    "vue-router": "^4.2.5",
+    "vuex": "^4.1.0",
+    "vuetify": "^3.5.8"
   },
   "devDependencies": {
-    "@intlify/vue-i18n-loader": "^1.0.0",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "^4.5.10",
-    "@vue/cli-plugin-vuex": "^4.5.10",
-    "@vue/cli-service": "~4.5.0",
-    "babel-eslint": "^10.1.0",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.2.2",
-    "sass": "^1.19.0",
-    "sass-loader": "^8.0.0",
-    "vue-cli-plugin-i18n": "~1.0.1",
-    "vue-cli-plugin-vuetify": "~2.0.9",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "babel-eslint"
-    },
-    "rules": {}
+    "@vitejs/plugin-vue": "^5.0.4",
+    "sass": "^1.70.0",
+    "vite": "^5.0.12"
   },
   "browserslist": [
     "> 1%",
